# nihplugfun

./: Cargo.toml  README.md
plugins/spectralfreeze/: Cargo.toml
plugins/spectralfreeze/src/: lib.rs  main.rs
plugins/stftlowpass/: Cargo.toml
plugins/stftlowpass/src/: lib.rs  main.rs
src/: lib.rs
